--- a/index.html
+++ b/index.html
@@ -36,28 +36,25 @@
                     <div class="bandeau_menu-dropdown">
                         <div class="container">
                             <div>
-                                <span>Strasbourg</span>
+                                <span>Laval</span>
                                 <ul class="bandeau_submenu">
                                     <li><a href="/pages/ecoworkings/green-place.html">Green Place</a></li>
-                                    <li><a href="#0">Eco Working Strasbourg</a></li>
                                     <li><a href="#0">Assolidaire</a></li>
-                                    <li><a href="#0">Le Comptoir du Rhin</a></li>
+                                    <li><a href="#0">Le Comptoir du Maine</a></li>
                                 </ul>                                     
                             </div>
                             <div>
-                                <span>Mulhouse</span>
+                                <span>Château-Gontier</span>
                                 <ul class="bandeau_submenu">
-                                    <li><a href="#0">Alsace eCafé</a></li>
-                                    <li><a href="#0">La Fonderie</a></li>
-                                    <li><a href="#0">EcoCentre Wagner</a></li>
+                                    <li><a href="#0">eCafé</a></li>
+                                    <li><a href="#0">La Harelle</a></li>
                                 </ul>                                     
                             </div>
                             <div>
-                                <span>Colmar</span>
+                                <span>Mayenne</span>
                                 <ul class="bandeau_submenu">
                                     <li><a href="#0">La Bulle Verte</a></li>
-                                    <li><a href="#0">Café Colmar</a></li>
-                                    <li><a href="#0">Les Colmamis</a></li>
+                                    <li><a href="#0">La Mayennaise</a></li>
                                 </ul>                                     
                             </div>
                         </div>
@@ -70,7 +67,6 @@
             </ul>
         </nav>  
     </div>
-    
 </header>
 <main>
     <!---------------------------------------------------------------------------->
@@ -98,37 +94,32 @@
     <!-- PRESENTATION -->
     <!---------------------------------------------------------------------------->
     <section class="presentation container">
-        <h1>Bienvenue sur ÉcoWorking</h1>
-        <h2>Le site dédié aux espaces de coworking respectueux de l'environnement</h2>
+        <h1>ÉcoWorking en Mayenne</h1>
         <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-            Dolores odio assumenda autem inventore architecto similique. 
-            Quo, quis non eius quae numquam, ullam cumque commodi 
-            mollitia iusto sed consectetur. Eveniet, magnam.
-            Quo, quis non eius quae numquam, ullam cumque commodi 
-            mollitia iusto sed consectetur. Eveniet, magnam.
+            Bienvenue sur le site dédié aux espaces de coworking situés dans le département de la Mayenne et respectueux de l'environnement
+            (fournisseurs d'énergie verte, matériaux recyclables, data-centers français...).
         </p>
         <div class="presentation_cities">
             <!-- VILLE 1 -->
             <div>
                 <a class="presentation_city" href="#0">
-                    <img src="/assets/img/index/str.jpg" alt="Strasbourg">
+                    <img src="/assets/img/index/laval.jpg" alt="Laval">
                 </a>
-                <h3>Strasbourg</h3>
+                <h3>Laval</h3>
             </div>
             <!-- VILLE 2 -->
             <div>
                 <a class="presentation_city" href="#0">
-                    <img src="/assets/img/index/mul.jpg" alt="Mulhouse">
+                    <img src="/assets/img/index/gontier.jpg" alt="Chateau Gontier">
                 </a>
-                <h3>Mulhouse</h3>
+                <h3>Château-Gontier</h3>
             </div>
             <!-- VILLE 3 -->
             <div>
                 <a class="presentation_city" href="#0">
-                    <img src="/assets/img/index/col.jpg" alt="Colmar">
+                    <img src="/assets/img/index/mayenne.jpg" alt="Mayenne">
                 </a>
-                <h3>Colmar</h3>
+                <h3>Mayenne</h3>
             </div>
         </div>
     </section>
@@ -142,7 +133,7 @@
             <div class="selection_place">
                 <div class="selection_place-header">
                     <span class="selection_place-name">Green Place</span>
-                    <span class="selection_place-city">Strasbourg</span>
+                    <span class="selection_place-city">Laval</span>
                 </div>
                 <div class="selection_place-containt">
                     <img src="/assets/img/index/place1.jpg" alt="Green Place">
@@ -169,8 +160,8 @@
             <!-- ECOWORKING 2 -->
             <div class="selection_place">
                 <div class="selection_place-header">
-                    <span class="selection_place-name">Alsace eCafé</span>
-                    <span class="selection_place-city">Mulhouse</span>
+                    <span class="selection_place-name">eCafé</span>
+                    <span class="selection_place-city">Château-Gontier</span>
                 </div>
                 <div class="selection_place-containt">
                     <img src="/assets/img/index/place2.jpg" alt="Alsace eCafé">
@@ -199,7 +190,7 @@
             <div class="selection_place">
                 <div class="selection_place-header">
                     <span class="selection_place-name">La Bulle Verte</span>
-                    <span class="selection_place-city">Colmar</span>
+                    <span class="selection_place-city">Mayenne</span>
                 </div>
                 <div class="selection_place-containt">
                     <img src="/assets/img/index/place3.jpg" alt="La Bulle Verte">
