--- a/pages/ecoworkings/green-place.html
+++ b/pages/ecoworkings/green-place.html
@@ -36,28 +36,25 @@
                     <div class="bandeau_menu-dropdown">
                         <div class="container">
                             <div>
-                                <span>Strasbourg</span>
+                                <span>Laval</span>
                                 <ul class="bandeau_submenu">
                                     <li><a href="/pages/ecoworkings/green-place.html">Green Place</a></li>
-                                    <li><a href="#0">Eco Working Strasbourg</a></li>
                                     <li><a href="#0">Assolidaire</a></li>
-                                    <li><a href="#0">Le Comptoir du Rhin</a></li>
+                                    <li><a href="#0">Le Comptoir du Maine</a></li>
                                 </ul>                                     
                             </div>
                             <div>
-                                <span>Mulhouse</span>
+                                <span>Château-Gontier</span>
                                 <ul class="bandeau_submenu">
-                                    <li><a href="#0">Alsace eCafé</a></li>
-                                    <li><a href="#0">La Fonderie</a></li>
-                                    <li><a href="#0">EcoCentre Wagner</a></li>
+                                    <li><a href="#0">eCafé</a></li>
+                                    <li><a href="#0">La Harelle</a></li>
                                 </ul>                                     
                             </div>
                             <div>
-                                <span>Colmar</span>
+                                <span>Mayenne</span>
                                 <ul class="bandeau_submenu">
                                     <li><a href="#0">La Bulle Verte</a></li>
-                                    <li><a href="#0">Café Colmar</a></li>
-                                    <li><a href="#0">Les Colmamis</a></li>
+                                    <li><a href="#0">La Mayennaise</a></li>
                                 </ul>                                     
                             </div>
                         </div>
@@ -105,7 +102,7 @@
             <div class="infos-coordonnees"> 
                 <img src="/assets/img/icones/maison.png" alt="adresse">
                 <div>
-                    <span class="ecoworking_coordonnees-rue">3 Rue de la Libération, 67000 Strasbourg</span>                            
+                    <span class="ecoworking_coordonnees-rue">3 Rue de la Libération, 53000 Laval</span>                            
                 </div>
             </div>                
         </div>
@@ -179,7 +176,7 @@
                 <h4>Emplacement</h4>
                 <div class="infos_localisation">
                     <div>
-                        3 Rue de la Libération, Bâtiment C, 67000 Strasbourg
+                        3 Rue de la Libération, Bâtiment C, 53000 Laval
                     </div>
                     <a  class="map" href="#">
                         <img src="/assets/img/icones/localisation.png">
